# CANary-firmware

./: .gitignore  Cargo.toml  Embed.toml  README.fr.md  README.md  USERGUIDE.fr.md  memory.x  rust-toolchain.toml  shell.nix
.cargo/: config.toml
exemples/: blink.rs  can_echo.rs  loopback.rs
src/: buttons.rs  can.rs  display.rs  main.rs  render.rs  screen.rs  sd.rs  spi.rs  state.rs  status.rs
