[package]
name = "canary-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
bxcan = "0.7.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.10.0", features = [
	"stm32f103",
	"medium",
	"rtic",
] }
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtt-target = "0.5.0"
heapless = "0.8.0"
