[package]
name = "canary-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
bxcan = "0.7.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-sdmmc = "0.7.0"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "0.2.0"
panic-rtt-target = "0.1.3"
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.1", features = ["cortex-m-systick"] }
rtt-target = "0.5.0"
stm32f1xx-hal = { version = "0.10.0", features = [
	"stm32f103",
	"medium",
	"rtic",
] }
